--- a/src/app.css
+++ b/src/app.css
@@ -11,4 +11,8 @@ html{
 h1,h2,h3 {
     font-family: 'Hedvig Letters Serif', sans-serif;
 }
-
+.bg-dots {
+    background-image: radial-gradient(circle, currentColor 1px, transparent 1px);
+    background-size: 20px 20px;
+    color:black;
+  }
