--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,7 @@ html{
     scroll-behavior: smooth;
 }
 *{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Hedvig Letters Serif', sans-serif;
 }
 h1,h2,h3 {
     font-family: 'Hedvig Letters Serif', sans-serif;
